[package]
name          = "angie"
version       = "0.0.1"
description   = "Simple merkle tree implementation in Rust"
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license-file  = "LICENSE"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/angie"
repository    = "https://github.com/hseeberger/angie"
documentation = "https://github.com/hseeberger/angie"

[dependencies]
const-hex   = { version = "1.14" }
derive_more = { version = "1.0", features = [ "as_ref", "debug", "display", "from" ] }
sha3        = { version = "0.10" }
thiserror   = { version = "2.0" }
